# playlist_explorer

./: .env_example  .gitignore  README.md  main.py  makefile  pyproject.toml  run.py  setup.cfg
deezer/: auth.py  client.py  settings.py
organizer/: entrypoint.py
organizer/auth/: base.py  deezer.py
organizer/deezer/: client.py
organizer/organizer/auth/: base.py  settings.py  spotify.py
organizer/organizer/client/: base.py
organizer/organizer/deezer/: client.py  entities.py
organizer/organizer/factory/: clients.py  menu.py
organizer/organizer/spotify/: client.py  entities.py
organizer/organizer/utils/: __init__.py
organizer/tests/: conftest.py  test_converter.py
playlist_order/: main.py
playlist_order/auth/: base.py  deezer.py  settings.py  spotify.py
playlist_order/deezer/: auth.py  client.py  entities.py  settings.py  utils.py
playlist_order/spotify/: client.py  settings.py
playlist_order/utils/: __init__.py
playlist_organizer/: main.py  matcher.py  utils.py
playlist_organizer/client/: base.py
playlist_organizer/factory/: clients.py  menu.py
playlist_organizer/menu/: builder.py  factory.py  render.py
playlist_organizer/utils/: __init__.py
tests/: conftest.py  test_converter.py  test_match.py  test_token.py
tests/raw_objects/: deezer_playlists_1.json  spotify_playlist_tracks_1.json  spotify_playlists_2.json  tracks_deezer.json  tracks_spotify.json
tests/raw_responses/: deezer_playlist_tracks_1.json  deezer_playlist_tracks_2.json  deezer_playlists_2.json  spotify_playlist_tracks_2.json  spotify_playlists_1.json
tests/test_client/: conftest.py  test_deezer.py  test_spotify.py
tests/test_matcher/: conftest.py  test_normalize.py  test_simple.py
(+19 files in other folders)
