[tool.poetry]
name = "playlist_order"
version = "0.1.0"
description = ""
authors = ["persi <perminov-s-i@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.14.2"
pydantic = {extras = ["dotenv"], version = "^1.6.1"}
inquirer = "^2.7.0"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
