[tool.poetry]
name = "playlist_order"
version = "0.1.0"
description = ""
authors = ["persi <perminov-s-i@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.14.2"
pydantic = {extras = ["dotenv"], version = "^1.6.1"}
inquirer = "^2.7.0"
typer = "^0.3.2"
tekore = "^3.0.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8-awesome = "^1.3.0"
mypy = "^0.782"
ipython = "^7.18.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
